--- a/styles/something.css
+++ b/styles/something.css
@@ -1,3 +1,15 @@
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .project {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about-section {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 /* Global styles  */
 
 * {
@@ -6,14 +18,14 @@
 }
 
 body {
-  background-color: #f0f8ff;
-  color: #403843;
+  background-color: #f6faff;
+  color: #332c35;
   font-family: Poppins, sans-serif;
 }
 
 p {
   font-weight: 200;
-  font-size: 18px;
+  font-size: 16px;
   letter-spacing: 1px;
 }
 
@@ -26,6 +38,7 @@ p {
 header {
   background-color: #8300e0;
   display: flex;
+  position: fixed;
   justify-content: end;
   width: 100%;
 }
@@ -33,8 +46,8 @@ header {
 .nav-el {
   display: flex;
   align-items: center;
-  letter-spacing: 2px;
-  padding: 50px 100px 0;
+  letter-spacing: 1px;
+  padding: 30px 100px 20px;
   gap: 40px;
 }
 
@@ -43,7 +56,7 @@ a {
   text-transform: uppercase;
   text-decoration: none;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 200;
 }
 
 h2 {
@@ -52,16 +65,21 @@ h2 {
   font-family: Oswald, sans-serif;
   color: #403843;
   text-align: left;
+  text-decoration: underline 7px #83c0c1;
 }
 
-/* About section  */
+.hidden {
+  display: none;
+}
+
+/* Skills section  */
 
 .about-section {
   background-color: #8300e0;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 20px 100px;
+  padding: 80px 100px 20px;
   color: white;
 }
 
@@ -76,13 +94,15 @@ h2 {
 }
 
 .about-section p {
-  font-size: 36px;
+  font-size: 30px;
+  font-weight: 200;
 }
 
 .about-section h2 {
   font-size: 48px;
   color: white;
   text-transform: none;
+  text-decoration: none;
 }
 
 /* Tech stacks section */
@@ -90,7 +110,7 @@ h2 {
 .skils-section {
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
+  padding-top: 100px;
 }
 
 .tech-stacks {
@@ -128,79 +148,84 @@ h2 {
 
 /* Projects section  */
 
-.project-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin-top: 150px;
-  margin-bottom: 50px;
-}
-
-.project-cards {
+.project {
+  height: 400px;
+  margin-top: 100px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
-.project-el {
-  width: 25%;
-  padding: 50px 0;
+.project h2 {
+  text-decoration: underline 7px #8300e0;
+  width: 10%;
 }
 
-.project-el img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.project-el h3 {
+.project-card h3,
+.project-card-back h3 {
   text-transform: uppercase;
-  font-weight: 100;
-  font-size: 20px;
-  padding-top: 20px;
-  text-align: center;
+  margin-bottom: 20px;
 }
 
-/* Contact form  */
-
-/* .contact-form {
-  width: 600px;
-  margin: 0 auto;
-  padding: 20px;
+.project-card p {
+  margin-bottom: 20px;
 }
 
-.contact-form form {
+.project-card {
+  width: 20%;
+  height: 350px;
+  margin-top: 100px;
+  padding: 30px;
+  transition: opacity 1s ease-out;
+}
+
+.project-card a {
+  color: #83c0c1;
+  text-decoration: underline;
+  font-weight: 600;
+}
+
+.project-card-back {
+  background-color: #8300e0;
+  opacity: 1;
+  color: white;
+  width: 20%;
+  height: 350px;
+  margin-top: 100px;
+  padding: 30px;
+  transition: opacity 1s ease-in;
+  gap: 20px;
+}
+
+.project-card-back li {
+  margin-bottom: 15px;
+}
+
+/* About me */
+
+.about-me {
+  padding: 200px 0 100px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
-.contact-form input[type="text"],
-    .contact-form textarea {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      box-sizing: border-box;
-    }
+.about-me-icons {
+  width: 25px;
+  margin: 0 10px;
+}
 
-    .contact-form textarea {
-      resize: vertical;
-      height: 150px;
-    }
+.about-me h2,
+.about-me p {
+  margin-bottom: 60px;
+}
 
-    .contact-form input[type="submit"] {
-      background-color: #4CAF50;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-
-    .contact-form input[type="submit"]:hover {
-      background-color: #45a049;
-    } */
+.about-me-photo {
+  width: 250px;
+  margin-left: 50px;
+  border-radius: 50%;
+  border: 5px solid #83c0c1;
+}
 
 /* Footer  */
 
