--- a/styles/something.css
+++ b/styles/something.css
@@ -1,15 +1,3 @@
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .project {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .about-section {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
 /* Global styles  */
 
 * {
@@ -107,7 +95,7 @@ h2 {
 
 /* Tech stacks section */
 
-.skils-section {
+.skills-section {
   display: flex;
   flex-direction: column;
   padding-top: 100px;
@@ -122,7 +110,7 @@ h2 {
 }
 
 .tech-stacks-text {
-  margin-left: 40px;
+  margin-left: 100px;
   width: 50%;
 }
 
@@ -131,7 +119,7 @@ h2 {
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
-  gap: 50px;
+  gap: 30px;
 }
 
 .stacks-img {
@@ -233,4 +221,76 @@ footer {
   background-color: #83c0c1;
   padding: 30px 100px;
   bottom: 0;
+}
+
+@media (width <= 800px) {
+  .container {
+    width: 90%;
+    justify-content: center;
+    padding: 0;
+  }
+
+  header {
+    display: flex;
+    position: fixed;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .about-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 400px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .tech-stacks {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 100px;
+  }
+
+  .skills-title {
+    margin-top: 50px;
+  }
+
+  .tech-stacks-text {
+    width: 100%;
+    margin: 100px 0;
+  }
+
+  .project {
+    display: flex;
+    flex-direction: column;
+    padding: 200px 0;
+  }
+
+  .project h2 {
+    width: 100%;
+  }
+
+  .project-card {
+    width: 100%;
+    height: auto;
+    transition: opacity 1s ease-out;
+  }
+
+  .project-card-back {
+    width: 100%;
+    height: auto;
+    transition: opacity 1s ease-in;
+  }
+
+  .about-me {
+    display: flex;
+    flex-direction: column;
+    padding: 300px 0 100px;
+  }
+
+  .about-me-photo {
+    display: none;
+  }
 }
