--- a/styles/something.css
+++ b/styles/something.css
@@ -72,7 +72,6 @@ h2 {
 }
 
 .logo-img {
-  position: static;
   width: 250px;
   height: 250px;
 }
@@ -138,7 +137,7 @@ h2 {
 
 .project {
   height: 400px;
-  margin-top: 100px;
+  margin-top: 40px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -163,7 +162,7 @@ h2 {
 .project-card {
   width: 20%;
   height: 350px;
-  margin-top: 100px;
+  margin-top: 40px;
   padding: 30px;
   transition: opacity 1s ease-out;
 }
@@ -230,11 +229,28 @@ footer {
     padding: 0;
   }
 
+  /* Mobile Header  */
+
+  .logo-img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .about-text {
+    width: 70%;
+    margin-left: 10px;
+  }
+
   header {
     display: flex;
     position: fixed;
     justify-content: center;
-    width: 100%;
+    align-items: center;
+  }
+
+  .nav-el {
+    letter-spacing: 1px;
+    padding: 10px;
   }
 
   .about-section {
@@ -242,10 +258,12 @@ footer {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    height: 400px;
+    height: 500px;
     margin: 0;
     padding: 0;
   }
+
+  /* Skills section  */
 
   .tech-stacks {
     display: flex;
@@ -259,13 +277,15 @@ footer {
 
   .tech-stacks-text {
     width: 100%;
-    margin: 100px 0;
+    margin: 50px 0;
   }
+
+  /* Project section */
 
   .project {
     display: flex;
     flex-direction: column;
-    padding: 200px 0;
+    padding: 300px 0 100px;
   }
 
   .project h2 {
@@ -292,5 +312,10 @@ footer {
 
   .about-me-photo {
     display: none;
+  }
+
+  footer {
+    background-color: #83c0c1;
+    padding: 30px;
   }
 }
