--- a/styles/something.css
+++ b/styles/something.css
@@ -18,9 +18,31 @@ p {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+a {
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 200;
+}
+
+h2 {
+  font-size: 32px;
+  text-transform: uppercase;
+  font-family: Oswald, sans-serif;
+  color: #403843;
+  text-align: left;
+  text-decoration: underline 7px #83c0c1;
+  margin-bottom: 50px;
+}
+
+.hidden {
+  display: none;
 }
 
 header {
@@ -39,191 +61,172 @@ header {
   gap: 40px;
 }
 
-a {
-  color: white;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: 16px;
-  font-weight: 200;
-}
-
-h2 {
-  font-size: 32px;
-  text-transform: uppercase;
-  font-family: Oswald, sans-serif;
-  color: #403843;
-  text-align: left;
-  text-decoration: underline 7px #83c0c1;
-}
-
-.hidden {
-  display: none;
-}
-
-/* Skills section  */
-
 .about-section {
   background-color: #8300e0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 80px 100px 20px;
   color: white;
 }
 
-.logo-img {
-  width: 250px;
-  height: 250px;
-}
+/* Mobile */
 
-.about-text {
-  margin-left: 70px;
-}
-
-.about-section p {
-  font-size: 30px;
-  font-weight: 200;
-}
-
-.about-section h2 {
-  font-size: 48px;
-  color: white;
-  text-transform: none;
-  text-decoration: none;
-}
-
-/* Tech stacks section */
-
-.skills-section {
-  display: flex;
-  flex-direction: column;
-  padding-top: 100px;
-}
-
-.tech-stacks {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 40px;
-}
-
-.tech-stacks-text {
-  margin-left: 100px;
-  width: 50%;
-}
-
-.tech-stacks-img {
-  width: 100%;
-  display: flex;
-  flex-flow: row;
-  flex-wrap: wrap;
-  gap: 30px;
-}
-
-.stacks-img {
-  transition: transform 0.2s;
-}
-
-.stacks-img:hover {
-  transform: scale(1.2);
-}
-
-.tech-stacks-img img {
-  width: 100px;
-}
-
-/* Projects section  */
-
-.project {
-  height: 400px;
-  margin-top: 150px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.project h2 {
-  text-decoration: underline 7px #8300e0;
-  width: 10%;
-}
-
-.project-card h3,
-.project-card-back h3 {
-  text-transform: uppercase;
-  margin-bottom: 20px;
-}
-
-.project-card p {
-  margin-bottom: 20px;
-}
-
-.project-card {
-  width: 20%;
-  height: 350px;
-  margin-top: 40px;
-  transition: opacity 1s ease-out;
-}
-
-.project-card a {
-  color: #83c0c1;
-  text-decoration: underline;
-  font-weight: 600;
-}
-
-.project-card-back {
-  background-color: #8300e0;
-  opacity: 1;
-  color: white;
-  width: 20%;
-  height: 350px;
-  margin-top: 100px;
-  padding: 30px;
-  transition: opacity 1s ease-in;
-  gap: 20px;
-}
-
-.project-card-back li {
-  margin-bottom: 15px;
-}
-
-/* About me */
-
-.about-me {
-  padding: 200px 0 100px;
-  display: flex;
-  flex-direction: row;
-}
-
-.about-me-icons {
-  width: 25px;
-  margin: 0 10px;
-}
-
-.about-me h2,
-.about-me p {
-  margin-bottom: 60px;
-}
-
-.about-me-photo {
-  width: 250px;
-  margin-left: 50px;
-  border-radius: 50%;
-  border: 5px solid #83c0c1;
-}
-
-/* Footer  */
-
-footer {
-  background-color: #83c0c1;
-  padding: 30px 100px;
-  bottom: 0;
-}
-
-@media (width <= 800px) {
+@media (width >= 320px) {
   .container {
-    width: 90%;
+    width: 95%;
+    justify-content: center;
+    padding: 0;
+  }
+
+  h2 {
+    font-size: 28px;
+  }
+
+  p {
+    font-size: 15px;
+  }
+
+  header {
+    display: flex;
+    position: fixed;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .nav-el {
+    letter-spacing: 1px;
+  }
+
+  .logo-img {
+    width: 150px;
+    height: 150px;
+  }
+
+  .about-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px 0 50px;
+  }
+
+  .about-text {
+    margin-left: 10px;
+  }
+
+  .about-section p {
+    font-size: 20px;
+    font-weight: 200;
+  }
+
+  .about-section h2 {
+    font-size: 28px;
+    text-decoration: none;
+    color: white;
+    margin-bottom: 10px;
+  }
+
+  /* Skills section  */
+
+  .tech-stacks {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 50px;
+  }
+
+  .skills-title {
+    margin-top: 50px;
+  }
+
+  .tech-stacks-text {
+    width: 100%;
+    margin: 50px 0;
+  }
+
+  .stacks-img:hover {
+    transform: scale(1.2);
+  }
+
+  .tech-stacks-img img {
+    width: 60px;
+    padding: 10px;
+  }
+
+  /* Project section */
+
+  .project {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project-card h3,
+  .project-card-back h3 {
+    text-transform: uppercase;
+    margin: 20px 0;
+  }
+
+  .project h2 {
+    text-decoration: underline 7px #8300e0;
+  }
+
+  .project-card p {
+    margin-bottom: 20px;
+  }
+
+  .project-card {
+    padding-bottom: 60px;
+    transition: opacity 1s ease-out;
+  }
+
+  .project-card a {
+    color: #83c0c1;
+    text-decoration: underline;
+    font-weight: 600;
+  }
+
+  .project-card-back {
+    background-color: #8300e0;
+    color: white;
+    text-align: center;
+    padding: 10px 0 20px;
+    width: 100%;
+    transition: opacity 1s ease-out;
+  }
+
+  .about-me {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 100px 0 50px;
+  }
+
+  .about-me-icons {
+    width: 25px;
+    margin: 20px 10px;
+  }
+
+  .about-me-photo {
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 50%;
+    border: 5px solid #83c0c1;
+  }
+
+  /* Footer  */
+
+  footer {
+    background-color: #83c0c1;
+    padding: 30px;
+    bottom: 0;
+  }
+}
+
+/* TABLET */
+
+@media (width >= 768px) {
+  .container {
+    width: 95%;
     justify-content: center;
     padding: 0;
   }
@@ -235,35 +238,38 @@ footer {
     height: 100px;
   }
 
-  .about-text {
-    width: 70%;
-    margin-left: 10px;
-  }
-
   header {
     display: flex;
     position: fixed;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
   }
 
   .nav-el {
     letter-spacing: 1px;
-    padding: 10px;
+    padding: 20px 50px;
   }
 
   .about-section {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    height: 500px;
-    margin: 0;
-    padding: 0;
+  }
+
+  .about-text {
+    margin-left: 10px;
+  }
+
+  .about-section p {
+    font-size: 20px;
+    font-weight: 200;
+  }
+
+  .about-section h2 {
+    font-size: 28px;
   }
 
   /* Skills section  */
-
   .tech-stacks {
     display: flex;
     flex-direction: column;
@@ -282,41 +288,184 @@ footer {
   }
 
   /* Project section */
-
   .project {
+    height: auto;
     display: flex;
     flex-direction: column;
-    padding: 100px 0;
+    justify-content: center;
+    align-items: center;
   }
 
-  .project h2 {
-    width: 100%;
+  .project-card h3,
+  .project-card-back h3 {
+    text-transform: uppercase;
+    margin: 20px 0;
+  }
+
+  .project-card p {
+    margin-bottom: 20px;
   }
 
   .project-card {
-    width: 100%;
-    height: auto;
+    padding: 20px 0;
     transition: opacity 1s ease-out;
   }
 
+  .project-card a {
+    color: #83c0c1;
+    text-decoration: underline;
+    font-weight: 600;
+  }
+
   .project-card-back {
+    background-color: #8300e0;
+    color: white;
+    text-align: center;
+    padding: 10px 0 40px;
     width: 100%;
-    height: auto;
-    transition: opacity 1s ease-in;
+    transition: opacity 1s ease-out;
   }
 
   .about-me {
     display: flex;
-    flex-direction: column;
-    padding: 300px 0 100px;
+    flex-direction: row;
+    align-items: center;
+    padding: 100px 0 50px;
   }
 
   .about-me-photo {
-    display: none;
+    width: 150px;
+    margin-left: 20px;
+    border-radius: 50%;
+    border: 5px solid #83c0c1;
+  }
+}
+
+/* DESKTOP */
+@media (width >= 1024px) {
+  /* Skills section  */
+  .about-section {
+    background-color: #8300e0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 80px 100px 20px;
+    color: white;
   }
 
-  footer {
-    background-color: #83c0c1;
-    padding: 30px;
+  .logo-img {
+    width: 250px;
+    height: 250px;
+  }
+
+  .about-text {
+    margin-left: 40px;
+  }
+
+  .about-section p {
+    font-size: 30px;
+    font-weight: 200;
+  }
+
+  .about-section h2 {
+    font-size: 48px;
+    color: white;
+    text-transform: none;
+    text-decoration: none;
+  }
+
+  /* Tech stacks section */
+  .skills-section {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .tech-stacks {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .tech-stacks-text {
+    margin-left: 60px;
+    width: 50%;
+  }
+
+  .tech-stacks-img {
+    width: 100%;
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+
+  .stacks-img {
+    transition: transform 0.2s;
+  }
+
+  .tech-stacks-img img {
+    width: 100px;
+  }
+
+  /* Projects section  */
+  .project {
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .project-card h3,
+  .project-card-back h3 {
+    text-transform: uppercase;
+    margin: 20px 0;
+  }
+
+  .project-card p {
+    margin-bottom: 20px;
+  }
+
+  .project-card {
+    width: 20%;
+    margin-top: 20px;
+    padding: 20px 0;
+    transition: opacity 1s ease-out;
+  }
+
+  .project-card a {
+    color: #83c0c1;
+    text-decoration: underline;
+    font-weight: 600;
+  }
+
+  .project-card-back {
+    background-color: #8300e0;
+    color: white;
+    text-align: center;
+    width: 20%;
+    margin-top: 20px;
+    padding: 10px 0 40px;
+    transition: opacity 1s ease-out;
+  }
+
+  /* About me */
+  .about-me {
+    padding: 150px 0 50px;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .about-me h2,
+  .about-me p {
+    margin-bottom: 60px;
+  }
+
+  .about-me-photo {
+    width: 250px;
+    margin-left: 50px;
+    border-radius: 50%;
+    border: 5px solid #83c0c1;
   }
 }
