--- a/styles/something.css
+++ b/styles/something.css
@@ -104,7 +104,7 @@ h2 {
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding-bottom: 100px;
+    margin-bottom: 150px;
   }
 
   .tech-stacks-img {
@@ -176,8 +176,9 @@ h2 {
     text-align: center;
   }
 
-  .toggle-details {
+  .button {
     background-color: #f2e5fb;
+    color: #332c35;
     font-family: Poppins, sans-serif;
     font-weight: 400;
     padding: 12px;
@@ -188,7 +189,7 @@ h2 {
     border: none;
   }
 
-  .toggle-details:hover {
+  .button:hover {
     background-color: #e6ccf8;
   }
 
@@ -229,12 +230,14 @@ h2 {
 
   .my-stat h3 {
     font-family: Oswald, sans-serif;
+    opacity: 0.7;
     font-size: 24px;
     color: #83c0c1;
   }
 
   .my-stat p {
     font-weight: 400;
+    opacity: 0.7;
     text-transform: uppercase;
   }
 
@@ -248,14 +251,18 @@ h2 {
     background-color: #83c0c1;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 20px 50px;
   }
 }
 
 /* DESKTOP RESPONSIVE */
 @media (width >= 1024px) {
+  h2 {
+    margin-bottom: 10px;
+  }
+
   .nav-el {
     display: flex;
     justify-content: end;
@@ -293,6 +300,7 @@ h2 {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding-bottom: 50px;
   }
 
   .skills-title h2 {
