--- a/styles/something.css
+++ b/styles/something.css
@@ -54,6 +54,7 @@ h2 {
 
   header {
     background-color: #8300e0;
+    position: fixed;
     width: 100%;
     align-items: center;
   }
@@ -63,7 +64,7 @@ h2 {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 20px;
+    padding: 15px;
   }
 
   .logo-img {
@@ -77,7 +78,7 @@ h2 {
     align-items: center;
     background-color: #8300e0;
     color: white;
-    padding: 50px 0;
+    padding: 70px 0 20px;
   }
 
   .about-text {
@@ -282,7 +283,7 @@ h2 {
   .about-section {
     display: flex;
     flex-direction: row;
-    padding: 0 50px;
+    padding: 70px 50px 20px;
   }
 
   .logo-img {
