--- a/styles/something.css
+++ b/styles/something.css
@@ -64,7 +64,7 @@ h2 {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 15px;
+    padding: 10px;
   }
 
   .logo-img {
@@ -106,6 +106,7 @@ h2 {
     justify-content: center;
     text-align: center;
     margin-bottom: 100px;
+    padding-top: 30px;
   }
 
   .tech-stacks-img {
@@ -148,7 +149,7 @@ h2 {
   .project {
     display: flex;
     flex-direction: column;
-    margin-top: 50px;
+    padding-top: 70px;
   }
 
   .project-item {
@@ -276,14 +277,14 @@ h2 {
     display: flex;
     justify-content: end;
     align-items: center;
-    padding: 30px 50px;
+    padding: 20px 50px;
     gap: 40px;
   }
 
   .about-section {
     display: flex;
     flex-direction: row;
-    padding: 70px 50px 20px;
+    padding: 70px 50px 0;
   }
 
   .logo-img {
@@ -309,7 +310,6 @@ h2 {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 50px;
   }
 
   .skills-title h2 {
